--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <div class="wrapper">
     <header>
         <h1 class="prj-title"><a href="https://{{ site.github }}.github.io/{{ site.name }}" title="{{ site.tagline }}">{{ site.name }}</a></h1>
-        {% if page.title == blank %}
+        {% if page.title == "" %}
         <h2 class="prj-mission">{{ site.tagline }}<br>{{ site.tagline2 }}</h2>
         <ul class="prj-buttons">
             <li><a href="demo" title="{{ site.tagline }} Live demo.">Live demo</a></li>
