--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h2 class="prj-mission">{{ site.tagline }}<br>{{ site.tagline2 }}</h2>
         <ul class="prj-buttons">
             <li><a href="demo" title="{{ site.tagline }} Live demo.">Live demo</a></li>
-            <li><a href="https://github.com/{{ site.github }}/{{ site.name }}" class="prj-buttons-docs" title="Documentation of {{ site.name }}">Documentation</a></li>
+            <li><a href="https://github.com/{{ site.github }}/{{ site.name }}/blob/master/README.md" class="prj-buttons-docs" title="Documentation of {{ site.name }}">Documentation</a></li>
             <li><a href="https://github.com/{{ site.github }}/{{ site.name }}/archive/v{{ site.version }}.zip" class="prj-buttons-download" title="Download {{ site.name }}. {{ site.tagline }}">Download <strong>v{{ site.version }}</strong></a></li>
         </ul>
         <p class="prj-view"><a href="https://github.com/{{ site.github }}/{{ site.name }}" title="{{ site.tagline }}">View the Project on GitHub <small>{{ site.github }}/{{ site.name }}</small></a></p>
