--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,7 @@
         {% endif %}
     </header>
 
-    <section>
-        {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
-        {{ content }}
-    </section>
+    <section>{% if page.title %}<h1>{{ page.title }}</h1>{% endif %}{{ content }}</section>
 </div>
 </body>
 </html>
