--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,12 @@
         {% endif %}
     </header>
 
-    <section>{% if page.title %}<h1>{{ page.title }}</h1>{% endif %}{{ content }}</section>
+    {% if content %}
+    <section>
+        {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
+        {{ content }}
+    </section>
+    {% endif %}
 </div>
 </body>
 </html>
