--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <div class="wrapper">
     <header>
         <h1 class="prj-title"><a href="https://{{ site.github }}.github.io/{{ site.name }}" title="{{ site.tagline }}">{{ site.name }}</a></h1>
-        {% if page.title %} {% else %}
+        {% if page.intro %}
         <h2 class="prj-mission">{{ site.tagline }}<br>{{ site.tagline2 }}</h2>
         <ul class="prj-buttons">
             <li><a href="demo" title="{{ site.tagline }} Live demo.">Live demo</a></li>
@@ -25,7 +25,7 @@
         {% endif %}
     </header>
 
-    {% if content %}
+    {% if !page.intro %}
     <section>
         {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
         {{ content }}
