--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         {% endif %}
     </header>
 
-    {% if !page.intro %}
+    {% if page.intro %}{% else %}
     <section>
         {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
         {{ content }}
