--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,13 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-136844903-1');
+    </script>
 </head>
 <body>
 <div class="wrapper">
